deployment-proxy.yml
# This create a namespace for monitoring
apiVersion: v1
kind: Namespace
metadata:
  name: satisfactory-monitoring
  labels:
    name: satisfactory-monitoring
---
# This will deploy an Nginx instance to forward requests to an external service
# The external service will only serve pngs based on the request
apiVersion: apps/v1
kind: Deployment
metadata:
  name: map-tile-proxy
  namespace: satisfactory-monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: map-tile-proxy
  template:
    metadata:
      labels:
        app: map-tile-proxy
    spec:
      volumes:
      - name: nginx-config
        configMap:
          name: map-tile-proxy-config
      - name: cache-volume
        emptyDir: {}
      containers:
      - name: map-tile-proxy
        image: nginx:latest
        command: [ "/bin/bash", "-c", "nginx -g 'daemon off;'" ]
        volumeMounts:
        - name: nginx-config
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
        - name: cache-volume
          mountPath: /proxy_cache
        ports:
        - containerPort: 8080
          name: http
        resources:
          limits:
            memory: "128Mi"
            cpu: "200m"
        startupProbe:
          httpGet:
            path: /-/healthy
            port: http
          failureThreshold: 1
          periodSeconds: 1
        readinessProbe:
          httpGet:
            path: /-/healthy
            port: http
          initialDelaySeconds: 5
          timeoutSeconds: 5
        livenessProbe:
          httpGet:
            path: /-/healthy
            port: http
          initialDelaySeconds: 15
          timeoutSeconds: 5
        securityContext:
          seccompProfile:
            type: RuntimeDefault
          runAsNonRoot: true
          allowPrivilegeEscalation: false
          runAsUser: 101
          runAsGroup: 101
          capabilities:
            drop:
              - ALL
---
# This will create a service to expose the Nginx instance
apiVersion: v1
kind: Service
metadata:
  name: map-tile-proxy
  namespace: satisfactory-monitoring
spec:
  type: ClusterIP
  selector:
    app: map-tile-proxy
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: http
---
# This will create an ingress to expose the Nginx instance to the internet
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: map-tile-proxy
  namespace: satisfactory-monitoring
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - secretName: tls-secret-maps-proxy
    hosts:
      - maps.satisfactory.djls.space
  rules:
  - host: maps.satisfactory.djls.space
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: map-tile-proxy
            port:
              name: http
